[gd_scene load_steps=6 format=3 uid="uid://bww3svscntriu"]

[ext_resource type="Script" path="res://component/timer_group_list/list_item_timer_group.gd" id="1_v63js"]
[ext_resource type="PackedScene" uid="uid://ckia7vuewnr8q" path="res://component/timer_group_list/list_item_base.tscn" id="2_gt0jc"]
[ext_resource type="Texture2D" uid="uid://dx5jjhuo3jfjb" path="res://asset/img/icon-arrow-right.png" id="3_gsrws"]
[ext_resource type="Texture2D" uid="uid://bthubo55jn7b" path="res://asset/img/button-delete.png" id="4_1byi5"]
[ext_resource type="Texture2D" uid="uid://0oseeawka6xf" path="res://asset/img/button-delete-pressed.png" id="5_rt44a"]

[node name="TimerListItemGroup" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1820.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_v63js")

[node name="ListItemBase" parent="." instance=ExtResource("2_gt0jc")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64

[node name="RightArrow" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_gsrws")
stretch_mode = 3

[node name="DeleteButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("4_1byi5")
texture_pressed = ExtResource("5_rt44a")
stretch_mode = 3

[connection signal="timer_list_item_pressed" from="ListItemBase" to="." method="_on_timer_group_list_item_timer_list_item_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
